--- a/examples/hydroelastic/python_nonconvex_compliant_mesh/BUILD.bazel
+++ b/examples/hydroelastic/python_nonconvex_compliant_mesh/BUILD.bazel
@@ -18,25 +18,19 @@ _VEGGIES_MESHES = forward_files(
     visibility = ["//visibility:private"],
 )
 
-install_data(
-    extra_prod_models = _VEGGIES_MESHES,
-)
-
 drake_py_binary(
     name = "drop_pepper_py",
     srcs = ["drop_pepper.py"],
     data = [
-        ":sdf_files",
-        # ":models",
+        ":models",
     ],
     deps = [
         "//bindings/pydrake",
     ],
 )
 
-
 filegroup(
-    name = "sdf_files",
+    name = "models",
     srcs = [
         "bell_pepper_no_stem_color.png",
         "bell_pepper_no_stem_normal.png",
@@ -46,7 +40,7 @@ filegroup(
         "yellow_bell_pepper_no_stem_low.mtl",
         "yellow_bell_pepper_no_stem_low.obj",
         "yellow_bell_pepper_no_stem_low.vtk",
-    ],
+    ] + _VEGGIES_MESHES,
 )
 
 add_lint_tests()
