--- a/geometry/proximity/BUILD.bazel
+++ b/geometry/proximity/BUILD.bazel
@@ -23,6 +23,7 @@ drake_cc_package_library(
         ":deformable_contact_internal",
         ":deformable_mesh_intersection",
         ":deformable_volume_mesh",
+        ":detect_null_simplex",
         ":field_intersection",
         ":hydroelastic_internal",
         ":make_box_field",
@@ -216,6 +217,17 @@ drake_cc_library(
         ":bvh_updater",
         ":mesh_deformer",
         ":volume_mesh",
+    ],
+)
+
+drake_cc_library(
+    name = "detect_null_simplex",
+    srcs = ["detect_null_simplex.cc"],
+    hdrs = ["detect_null_simplex.h"],
+    deps = [
+        ":volume_mesh",
+        ":volume_to_surface_mesh",
+        "//common:sorted_pair",
     ],
 )
 
@@ -956,6 +968,15 @@ drake_cc_googletest(
         ":deformable_volume_mesh",
         ":make_box_mesh",
         "//common/test_utilities:eigen_matrix_compare",
+    ],
+)
+
+drake_cc_googletest(
+    name = "detect_null_simplex_test",
+    deps = [
+        ":detect_null_simplex",
+        ":make_cylinder_mesh",
+        ":mesh_to_vtk",
     ],
 )
 
