Test bunny meshes through yellow pepper example.
Hack the hydroelastic bell-pepper example to use bunny meshes.
Compare two bunny meshes by switching them in pepper.sdf.
It will need lots of clean up and renaming if we will share it.

bunny.obj illustration mesh
bunny_problem.vtk  problematic tetrahedral collision mesh
bunny_fixed.vtk fixed tetrahedral collision mesh

--- a/examples/hydroelastic/python_nonconvex_mesh/BUILD.bazel
+++ b/examples/hydroelastic/python_nonconvex_mesh/BUILD.bazel
@@ -46,6 +46,9 @@ drake_py_binary(
 filegroup(
     name = "models",
     srcs = [
+        "bunny.obj",
+        "bunny_problem.vtk",
+        "bunny_fixed.vtk",
         "bowl.sdf",
         "pepper.sdf",
         "table.sdf",
