Drop a yellow brick on the bunny.
- Rebased on Xuchen's bunny-mesh-test branch

--- a/examples/multibody/bunny/BUILD.bazel
+++ b/examples/multibody/bunny/BUILD.bazel
@@ -10,6 +10,8 @@ drake_cc_binary(
     name = "bunny",
     data = [
         "bunny.vtk",
+        "bunny_fixed.vtk",
+        "bunny_problem.vtk",
     ],
     srcs = [
         "bunny.cc",
