--- a/tutorials/BUILD.bazel
+++ b/tutorials/BUILD.bazel
@@ -100,6 +100,14 @@ drake_jupyter_py_binary(
 )
 
 drake_jupyter_py_binary(
+    name = "box_on_box",
+    add_test_rule = 1,
+    deps = [
+        "//bindings/pydrake"
+    ],
+)
+
+drake_jupyter_py_binary(
     name = "hydroelastic_contact_basics",
     add_test_rule = 1,
     test_timeout = "moderate",
