--- a/geometry/BUILD.bazel
+++ b/geometry/BUILD.bazel
@@ -629,6 +629,7 @@ filegroup(
     name = "test_vtk_files",
     testonly = 1,
     srcs = [
+        "test/016.vtk",
         "test/non_convex_mesh.vtk",
         "test/one_negative_tetrahedron.vtk",
         "test/one_tetrahedron.vtk",
