--- a/geometry/BUILD.bazel
+++ b/geometry/BUILD.bazel
@@ -629,6 +629,8 @@ filegroup(
     name = "test_vtk_files",
     testonly = 1,
     srcs = [
+        "test/MA-027-AY-0006_bubble35mm_fTetWild.vtk",
+        "test/MA-027-AY-0006_pawframe_fTetWild.vtk",
         "test/non_convex_mesh.vtk",
         "test/one_negative_tetrahedron.vtk",
         "test/one_tetrahedron.vtk",
