--- a/tutorials/BUILD.bazel
+++ b/tutorials/BUILD.bazel
@@ -109,6 +109,15 @@ drake_jupyter_py_binary(
 )
 
 drake_jupyter_py_binary(
+    name = "BoxBoxTouchDemo",
+    add_test_rule = 1,
+    test_timeout = "moderate",
+    deps = [
+        "//bindings/pydrake",
+    ],
+)
+
+drake_jupyter_py_binary(
     name = "rendering_multibody_plant",
     add_test_rule = 1,
     deps = [
