Test: hydroelastics and deformables
- Modify deformable_torus example.
- Make gripper compliant_hydroelastic.
- Add a compliant_hydroelastic yellow bell pepper.

--- a/examples/hydroelastic/python_nonconvex_mesh/BUILD.bazel
+++ b/examples/hydroelastic/python_nonconvex_mesh/BUILD.bazel
@@ -17,7 +17,7 @@ filegroup(
         "@drake_models//:veggies/yellow_bell_pepper_no_stem_low.obj",
         "@drake_models//:veggies/yellow_bell_pepper_no_stem_low.vtk",
     ],
-    visibility = ["//:__pkg__"],
+    visibility = ["//visibility:public"]
 )
 
 drake_py_binary(
