[geometry] QueryObject::ComputeContactVolumes()
- ContactSurface can store values at face centroids
- Plumb QueryObject, GeometryState, and ProximityEngine
- Python binding of ComputeContactVolumes() for easy testing
- test_ContactVolumes.ipynb (pepper and bowl)
- Python bind _MakeTriangleFromPolygonMesh
- Python bind ContactSurface::EvaluateCentroidalValue() and HasCentroidalValue()
- Introduce MakeTriangleFromPolygonMeshWithCentroids() for visualization
- Utilities to write polygonal surface fields into a vtk file.
- Remove holes (disable culling) in contact surfaces
- Order two ContactSurface's in std::pair<> by GeometryId's
- test_EDContact_BoxBowl.ipynb (box and bowl)
- test_EnergyDensityContact.ipynb (box and box)
- WIP visualize polygon surface mesh
- box-slide-box 10x more time steps

--- a/geometry/BUILD.bazel
+++ b/geometry/BUILD.bazel
@@ -74,6 +74,7 @@ drake_cc_library(
         "//common:default_scalars",
         "//common:sorted_pair",
         "//geometry/proximity:collision_filter",
+        "//geometry/proximity:compute_contact_volume",
         "//geometry/proximity:deformable_contact_internal",
         "//geometry/proximity:hydroelastic_internal",
         "//geometry/proximity:make_mesh_from_vtk",
