--- a/geometry/proximity/BUILD.bazel
+++ b/geometry/proximity/BUILD.bazel
@@ -185,6 +185,34 @@ drake_cc_library(
 )
 
 drake_cc_library(
+    name = "compute_contact_volume",
+    srcs = ["compute_contact_volume.cc"],
+    hdrs = ["compute_contact_volume.h"],
+    internal = True,
+    visibility = [
+        "//geometry:__pkg__",
+    ],
+    deps = [
+        ":bvh",
+        ":calc_distance_to_surface_mesh",
+        ":contact_surface_utility",
+        ":distance_to_point_callback",
+        ":hydroelastic_internal",
+        ":make_mesh_field",
+        ":mesh_field",
+        ":mesh_intersection",
+        ":posed_half_space",
+        ":triangle_surface_mesh",
+        ":volume_mesh",
+        ":volume_to_surface_mesh",
+        "//common:default_scalars",
+        "//common:essential",
+        "//geometry/query_results:contact_surface",
+        "//math:geometric_transform",
+    ],
+)
+
+drake_cc_library(
     name = "contact_surface_utility",
     srcs = ["contact_surface_utility.cc"],
     hdrs = ["contact_surface_utility.h"],
@@ -1147,6 +1175,27 @@ drake_cc_googletest(
     name = "collisions_exist_callback_test",
     deps = [
         ":collisions_exist_callback",
+    ],
+)
+
+drake_cc_googletest(
+    name = "compute_contact_volume_test",
+    deps = [
+        ":compute_contact_volume",
+        ":contact_surface_utility",
+        ":make_box_field",
+        ":make_box_mesh",
+        ":make_sphere_field",
+        ":make_sphere_mesh",
+        ":mesh_to_vtk",
+        ":triangle_surface_mesh",
+        ":volume_to_surface_mesh",
+        "//common/test_utilities:eigen_matrix_compare",
+        "//common/test_utilities:expect_throws_message",
+        "//geometry:shape_specification",
+        "//math:autodiff",
+        "//math:geometric_transform",
+        "//math:gradient",
     ],
 )
 
