Hack to test shark_toy asset. bazel run //tools:model_visualizer -- package://drake/tutorials/SharkToyOneMesh.sdf bazel run //tutorials:hydroelastic_contact_shark_toy Use geometry/proximity/refine_mesh_and_make_pressure_field.cc to write VTK file with pressure field. paraview SharkToyTetrahedra.vtk_pressure.vtk

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -64,6 +64,7 @@ filegroup(
         "//examples/scene_graph:models",
         "//examples/simple_gripper:models",
         "//multibody/benchmarks/acrobot:models",
+        "//tutorials:models",
         "@drake_models",
     ],
     visibility = ["//:__subpackages__"],
