Test prototype to read shark VTK + distance field. bazel run //tools:model_visualizer -- package://drake/examples/hydroelastic/python_nonconvex_mesh/shark_combined_refined_sdf.sdf  package://drake/examples/hydroelastic/python_nonconvex_mesh/grids.sdf bazel run //tools:model_visualizer -- ~/GitHub/DamrongGuoy2/drake/examples/hydroelastic/python_nonconvex_mesh/shark_toy_64pieces/model.sdf  package://drake/examples/hydroelastic/python_nonconvex_mesh/grids.sdf

--- a/examples/hydroelastic/python_nonconvex_mesh/BUILD.bazel
+++ b/examples/hydroelastic/python_nonconvex_mesh/BUILD.bazel
@@ -10,6 +10,8 @@ filegroup(
         "shark.obj",
         "shark.mtl",
         "shark.sdf",
+	"shark_combined_refined_sdf.vtk",
+	"shark_combined_refined_sdf.sdf",
         "shark_texture.png",
         "table.sdf",
         "sergey_combined.vtk",
