3D_Dollhouse_Happy_Brother, Grid of 2-cm slabs, fix bug (deny VTK without field)

--- a/examples/hydroelastic/python_nonconvex_mesh/BUILD.bazel
+++ b/examples/hydroelastic/python_nonconvex_mesh/BUILD.bazel
@@ -6,15 +6,20 @@ package(default_visibility = ["//visibility:private"])
 filegroup(
     name = "models",
     srcs = [
+        "3D_Dollhouse_Happy_Brother.sdf",
+        "3D_Dollhouse_Happy_Brother.mtl",
+        "3D_Dollhouse_Happy_Brother.obj",
+        "3D_Dollhouse_Happy_Brother_tetwild_tetgen.vtk",
+        "3D_Dollhouse_Happy_Brother_texture.png",
         "grids.sdf",
-        "shark.obj",
+        "sergey_combined.vtk",
         "shark.mtl",
+        "shark.obj",
         "shark.sdf",
-	"shark_combined_refined_sdf.vtk",
-	"shark_combined_refined_sdf.sdf",
+        "shark_combined_refined_sdf.sdf",
+        "shark_combined_refined_sdf.vtk",
         "shark_texture.png",
         "table.sdf",
-        "sergey_combined.vtk",
     ],
     visibility = ["//:__pkg__"],
 )
