VegaFEM-v4.0.5/tetMesher says our failed input are not 2-manifold.

--- a/geometry/BUILD.bazel
+++ b/geometry/BUILD.bazel
@@ -826,6 +826,8 @@ filegroup(
     testonly = 1,
     srcs = [
         "test/Android_Lego.obj",
+        "test/Android_Lego.mtl",
+        "test/Android_Lego_texture.png",
         "test/bad_geometry_volume_zero.obj",
         "test/convex.obj",
         "test/cube_corners.obj",
