Prototype to speed up refine_mesh from O(n^2) to about O(n log n) by avoiding global search.
3D_Dollhouse_Happy_Brother_CDT.vtk (10,811 tetrahedra) improved from 60 seconds down to half a second.

With the code in master, to find the hotspot:
1. $ gdb bazel-bin/geometry/proximity/refine_mesh
2. (gdb) run geometry/test/3D_Dollhouse_Happy_Brother_CDT.vtk 3D_Dollhouse_Happy_Brother_CDT_refine.vtk
3. Ctrl-C, bt, c
4. Repeat 3.
It always pauses in VolumeMeshRefiner::GetTetrahedraOnEdge(int, int) due to global searches that should be local searches.

--- a/geometry/BUILD.bazel
+++ b/geometry/BUILD.bazel
@@ -842,6 +842,7 @@ filegroup(
     name = "test_vtk_files",
     testonly = 1,
     srcs = [
+	    "test/3D_Dollhouse_Happy_Brother_CDT.vtk",
         "test/cube_as_6_squares.vtk",
         "test/cube_as_volume.vtk",
         "test/inflation_infeasible_vertex.vtk",
