--- a/geometry/proximity/BUILD.bazel
+++ b/geometry/proximity/BUILD.bazel
@@ -1750,6 +1750,7 @@ drake_cc_googletest(
     name = "surface_to_volume_mesh_test",
     data = [
         "//geometry:test_obj_files",
+        "//geometry:test_vtk_files",
         "@drake_models//:dishes",
         "@drake_models//:ycb",
     ],
@@ -1757,6 +1758,8 @@ drake_cc_googletest(
         ":mesh_to_vtk",
         ":obj_to_surface_mesh",
         ":surface_to_volume_mesh",
+        ":volume_to_surface_mesh",
+        ":vtk_to_volume_mesh",
         "//common",
         "//common/test_utilities",
     ],
