Start debugging a throw in ObjMeshOrientable::Init()

--- a/geometry/BUILD.bazel
+++ b/geometry/BUILD.bazel
@@ -835,6 +835,7 @@ filegroup(
         "test/evo_bowl_fine_7910triangles.mtl",
         "test/evo_bowl_fine_7910triangles.obj",
         "test/gso_RoLoPM_adizero_F50_TRX_FG_LEA.obj",
+        "test/hot3d_117658302265452_RoLoPoly.obj",
         "test/non_convex_mesh.obj",
         "test/octahedron.mtl",
         "test/octahedron.obj",
