[prototype] Embedded Pressure Field on embedding tetrahedral meshes of input surface

--- a/geometry/BUILD.bazel
+++ b/geometry/BUILD.bazel
@@ -838,6 +838,9 @@ filegroup(
         "test/rotated_cube_squished.obj",
         "test/rotated_cube_unit_scale.obj",
         "test/two_cube_objects.obj",
+        "test/yellow_bell_pepper_no_stem_low.mtl",
+        "test/yellow_bell_pepper_no_stem_low.obj",
+        "test/yellow_pepper_MLabPrec5mmOffset5mm.obj",
     ],
 )
 
@@ -854,6 +857,7 @@ filegroup(
         "test/some_volume.vtk",
         "test/two_tetrahedra_with_field_variable.vtk",
         "test/unstructured.vtk",
+        "test/yellow_pepper_offset_and_grids_tetgen.vtk",
     ],
 )
 
