--- a/tutorials/BUILD.bazel
+++ b/tutorials/BUILD.bazel
@@ -65,6 +65,22 @@ drake_jupyter_py_binary(
 )
 
 drake_jupyter_py_binary(
+    name = "hydroelastic_embpres",
+    add_test_rule = 1,
+    data = [
+        "@drake_models//:dishes",
+        "@drake_models//:veggies",
+        ":vtk_files",
+    ],
+    # TODO(#21380) Revisit timeout value when deferred reification is
+    # implemented.
+    test_timeout = "moderate",
+    deps = [
+        "//bindings/pydrake",
+    ],
+)
+
+drake_jupyter_py_binary(
     name = "index",
     add_test_rule = 1,
     deps = [
@@ -196,6 +212,13 @@ drake_py_test(
     tags = ["lint"],
     deps = [
         "@rules_python//python/runfiles",
+    ],
+)
+
+filegroup(
+    name = "vtk_files",
+    srcs = [
+        "pepper_embsdf.vtk",
     ],
 )
 
