--- a/tutorials/BUILD.bazel
+++ b/tutorials/BUILD.bazel
@@ -214,6 +214,7 @@ filegroup(
     name = "vtk_files",
     srcs = [
         "pepper_embsdf.vtk",
+        "yellow_pepper_Offset1cmGrid2cm_sdfield.vtk",
     ],
 )
 
