--- a/geometry/proximity/BUILD.bazel
+++ b/geometry/proximity/BUILD.bazel
@@ -1288,6 +1288,9 @@ drake_cc_googletest(
     ],
     deps = [
         ":distance_to_point_callback",
+        ":field_intersection",
+        ":hydroelastic_internal",
+        ":make_box_field",
         ":make_box_mesh",
         ":make_mesh_from_vtk",
         ":mesh_to_vtk",
