--- a/geometry/proximity/BUILD.bazel
+++ b/geometry/proximity/BUILD.bazel
@@ -42,6 +42,7 @@ drake_cc_package_library(
         ":make_cylinder_mesh",
         ":make_ellipsoid_field",
         ":make_ellipsoid_mesh",
+        ":make_empress_field",
         ":make_mesh_field",
         ":make_mesh_from_vtk",
         ":make_sphere_field",
@@ -640,6 +641,28 @@ drake_cc_library(
         ":volume_mesh",
         ":volume_to_surface_mesh",
         "//geometry:shape_specification",
+    ],
+)
+
+drake_cc_library(
+    name = "make_empress_field",
+    srcs = ["make_empress_field.cc"],
+    hdrs = ["make_empress_field.h"],
+    deps = [
+        ":field_intersection",
+        ":hydroelastic_internal",
+        ":make_box_field",
+        ":make_box_mesh",
+        ":make_mesh_from_vtk",
+        ":mesh_to_vtk",
+        ":obj_to_surface_mesh",
+        ":volume_mesh",
+        ":volume_to_surface_mesh",
+        ":vtk_to_volume_mesh",
+        "//common",
+    ],
+    implementation_deps = [
+        ":distance_to_point_callback",
     ],
 )
 
@@ -1290,6 +1313,7 @@ drake_cc_googletest(
         ":hydroelastic_internal",
         ":make_box_field",
         ":make_box_mesh",
+        ":make_empress_field",
         ":make_mesh_from_vtk",
         ":mesh_to_vtk",
         ":obj_to_surface_mesh",
