--- a/geometry/proximity/BUILD.bazel
+++ b/geometry/proximity/BUILD.bazel
@@ -835,6 +835,7 @@ drake_cc_library(
     tags = ["exclude_from_package"],
     deps = [
         ":make_empress_field",
+        ":mesh_to_vtk",
         ":volume_mesh_refiner",
         "//common",
         # TODO(DamrongGuoy): Move ":distance_to_point_callback" into
